--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,50 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    min-height: 100vh;
+}
+
+.header-container {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #1F2937;
+    color: white;
+    padding: 30px;
+}
+
+.logo {
+    display: flex;
+    justify-content: flex-start;
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.navigation {
+    display: flex;
+    justify-content: flex-end;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    padding: 8px;
+}
+
+.content-container {
+    display: flex;
+    flex: 1;
+}
+
 footer {
     display: flex;
     align-items: center;
