--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,15 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+button {
+    background-color: #3882F6;
+    border-radius: 25px;
+    border: 0;
+    color: white;
+    font-weight: 700;
+    padding: 9px;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -84,6 +93,48 @@ a {
 .first-image {
     height: 100%;
     width: 100%;
+}
+
+.second-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 200px;
+    padding: 20px;
+}
+
+.second-title {
+    display: flex;
+    font-size: 24px;
+    font-weight: 900;
+    padding-bottom: 5px;
+}
+
+.second-text {
+    display: flex;
+    font-size: 12px;
+    font-style: italic;
+    padding-bottom: 5px;
+}
+
+.second-content {
+    display: flex;
+    flex: 1 0 100px;
+    flex-direction: row;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
+.second-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 12px;
+}
+
+img {
+    height: 150px;
 }
 
 footer {
