--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ a {
     justify-content: flex-start;
     align-items: center;
     height: 200px;
-    padding: 20px;
+    padding: 40px;
 }
 
 .second-title {
@@ -135,6 +135,34 @@ a {
 
 img {
     height: 150px;
+}
+
+.third-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #e5e7eb;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.third-quote {
+    display: flex;
+    width: 800px;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1f2937;
+}
+
+.third-quotation {
+    display: flex;
+    width: 800px;
+    flex-direction: row;
+    justify-content: flex-end;
+    font-size: 18px;
+    font-weight: 900;
+    color: black;
 }
 
 footer {
