--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ button {
 body {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     margin: 0;
     min-height: 100vh;
 }
@@ -123,7 +124,6 @@ a {
     flex: 1 0 100px;
     flex-direction: row;
     gap: 10px;
-    flex-wrap: wrap;
 }
 
 .second-item {
@@ -131,6 +131,12 @@ a {
     flex-direction: column;
     align-items: center;
     font-size: 12px;
+}
+
+.second-image {
+    border-radius: 25px;
+    border: 10px;
+    border: 2px solid #3882F6;
 }
 
 img {
@@ -163,6 +169,57 @@ img {
     font-size: 18px;
     font-weight: 900;
     color: black;
+}
+
+.fourth-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 100px;
+}
+
+.fourth-form-padding {
+    display: flex;
+    flex: 1;
+    background-color: #3882F6;
+    border-radius: 20px;
+    color: white;
+    padding: 30px;
+    justify-content: center;
+    gap: 60px;
+}
+
+.fourth-form {
+    display: flex;
+}
+
+.fourth-left {
+    display: flex;
+    flex-shrink: 0;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 600px;
+}
+
+.fourth-title {
+    display: flex;
+    font-weight: 900;
+}
+
+.fourth-text {
+    display: flex;
+}
+
+.fourth-right {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.fourth-button {
+    display: flex;
+    border: 2px solid #ffffff;
 }
 
 footer {
